--- a/css/styles.css
+++ b/css/styles.css
@@ -564,9 +564,227 @@ text-transform: capitalize;
 
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  padding: 72px 24px 24px 24px;
 }
 
 .backdrop:not(.is-open) .modal {
   transform: translate(-50%, -50%) scale(1.5);
 
+}
+.footer-button {
+  position: absolute; 
+  top: 24px;
+  right: 24px;
+  width: 24px; 
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  background-color: #e7e9fc;  
+  border: 1px solid rgba(0, 0, 0, 0.1); 
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-button:hover,
+.footer-button:focus {
+  background-color: #404bbf; 
+}
+
+.footer-button:hover svg,
+.footer-button:focus svg {
+  border: none;
+}
+
+.footer-social-btn {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.footer-social-btn:hover
+.footer-social-btn:focus {
+  fill: #ffffff
+}
+
+.footer-page {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color:  #2E2F42;
+  margin-bottom: 16px;
+}
+
+.social-clause{
+  margin-bottom: 16px;
+  font-weight: 500; 
+  font-size: 16px;
+  line-height: 1.5; 
+  letter-spacing: 0.02em;
+  color: #ffffff;
+}
+.social-form {
+  display: flex; 
+  gap: 24px;
+}
+.social-form-style {
+
+}
+
+.social-form-email{
+  width: 264px; 
+  height: 40px;
+  border: 1px solid #ffffff; 
+  background-color: transparent; 
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em; 
+  padding-left: 16px; 
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px; 
+  color: #ffffff;
+}
+
+
+.E-mail {
+  color: #ffffff; 
+}
+
+.social-fomin-bth{
+  min-width: 165px;
+  height: 40px; 
+  display: flex; 
+  justify-content: center;
+  align-items: center; 
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4D5AE5;
+  border: none; 
+  border-radius: 4px; 
+}
+
+
+
+
+.modal-element {
+  margin-bottom: 8px;
+}
+
+.name{
+  font-size: 12px; 
+  line-height: 1.17; 
+  letter-spacing: 0.04em;
+  color: #8e8f99; 
+  display: block;
+  margin-bottom: 4px; 
+}
+
+.input-wrap{
+  position: relative; 
+}
+
+.element-modal{
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4); 
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.element-modal :focus {
+  border-color: #4D5AE5; 
+}
+
+.element-class{
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.element-class :focus{
+  fill: #4D5AE5; 
+}
+
+.comment-element{
+  margin-bottom: 16px;
+}
+
+.comment-element-wrap {
+  width: 100%;
+  height: 120px;
+  font-size: 12px; 
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px; 
+  background-color: transparent; 
+  padding: 8px 16px;
+  outline: transparent; 
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.comment-element-wrap :focus {
+  border-color: #4D5AE5; 
+}
+.comment-accept{
+  margin-bottom: 24px;
+}
+.name-accept{
+  font-size: 12px;
+  line-height: 1.17; 
+  letter-spacing: 0.04em;
+  color:#8e8f99; 
+}
+.span-accept{
+  width: 16px;
+  height: 16px; 
+  border: 1px solid rgba(46, 47, 66, 0.4); 
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex; 
+  align-items: center;
+  justify-content: center; 
+  fill: transparent; 
+}
+
+.class-accept{
+  
+}
+
+.logo-accept {
+  color:#4d5ae5; 
+}
+.modal-bth {
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4D5AE5;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  text-align: center;
 }
