--- a/css/styles.css
+++ b/css/styles.css
@@ -549,8 +549,8 @@ text-transform: capitalize;
   top:50%;
   left: 50%;
 
-  width: 488px;
-  min-height: 548px;
+  width: 408px;
+  min-height: 584px;
   border-radius: 4px;
 
   transform: translate(-50%, -50%) ;
@@ -630,10 +630,12 @@ text-transform: capitalize;
   letter-spacing: 0.02em;
   color: #ffffff;
 }
-.social-form-style {
-  display: flex; 
+
+.social-form {
+  display: flex;
   gap: 24px;
 }
+
 
 .social-form-email{
   width: 264px; 
@@ -722,7 +724,9 @@ text-transform: capitalize;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.element-modal :hover,
 .element-modal :focus {
+  border: 1px solid  #4D5AE5;
   border-color: #4D5AE5; 
 }
 
@@ -766,14 +770,14 @@ text-transform: capitalize;
 }
 
 
-.element-accept-checkbox:focus + .review-form-checkbox-label > .span-policy {
+.element-accept-checkbox:focus + .name-accept-checkbox-label > .span-accept {
   border: 1px solid #4d5ae5;
 }
 
 
 
 
-.element-accept-checkbox:checked + .review-form-checkbox-label> .span-policy {
+.element-accept-checkbox:checked + .name-accept-checkbox-label> .span-accept {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
@@ -808,7 +812,7 @@ text-transform: capitalize;
   color:#4d5ae5; 
 }
 .modal-bth {
-  font-family: "Roboto";
+  font-family: "Roboto",sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
