--- a/css/styles.css
+++ b/css/styles.css
@@ -761,8 +761,8 @@ text-transform: capitalize;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.comment-element-wrap :focus 
-.comment-element-wrap :hover, {
+.comment-element-wrap :focus, 
+.comment-element-wrap :hover {
   border-color: #4D5AE5; 
 }
 
