--- a/css/styles.css
+++ b/css/styles.css
@@ -725,9 +725,6 @@ text-transform: capitalize;
 }
 
 
-.element-modal :focus {
-  border-color: #4D5AE5; 
-}
 
 .element-class{
   position: absolute;
@@ -737,9 +734,6 @@ text-transform: capitalize;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
-.element-class :focus{
-  fill: #4D5AE5; 
-}
 
 .comment-element{
   margin-bottom: 16px;
@@ -761,30 +755,31 @@ text-transform: capitalize;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.comment-element-wrap :focus, 
-.comment-element-wrap :hover {
-  border-color: #4D5AE5; 
+
+.comment-element-wrap :hover,
+.comment-element-wrap :focus,
+.comment-element-wrap {
+  border-color: #4d5ae5;
 }
+
+
+
+
 
 .comment-accept{
   margin-bottom: 24px;
 }
 
 
-.element-accept-checkbox:focus + .name-accept-checkbox-label > .span-accept {
-  border: 1px solid #4d5ae5;
+.span-accept :hover,
+.span-accept :focus,
+.span-accept :active {
+  border-color: #4d5ae5;
 }
 
 
 
 
-.element-accept-checkbox:checked 
-+ .name-accept-checkbox-label
-> .span-accept {
-  background-color: #404bbf;
-  border: none;
-  fill: #f4f4fd;
-}
 
 .span-accept :hover,
 .span-accept :focus,
